# JobHunter

./: .env.example  .gitignore  .golangci.yml  .vercelignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.tracker  LICENSE  Makefile  README.md  blog.md  blog2.md  config.ci.toml  config.example.toml  docker-compose.yml  go.mod  go.sum  jobhunter_improvements.md  package-lock.json  package.json  pi-session-2026-05-25T16-41-59-936Z_019e6003-c37f-7f2e-a193-936be3e88e53.html  pyproject.toml  render.yaml  scrappy_improvements.md  sync-all.sh  vercel.json
.agent-data/: config.yaml  llm.yaml
.claude/reviews/: local-review.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: promote.sh
.github/workflows/: bouncescan.yml  cleanup.yml  deploy-tracker.yml  followup.yml  onsite.yml  promote.yml  release.yml  remote.yml  scrape-onsite.yml  scrape-remote.yml  scrape.yml  send-emails.yml  send.yml  tests.yml
api/: click.go  click.js  dashboard.js  health.go  health.js  track.go  track.js  tracker.go
docs/: README.md  architecture.md  configuration.md  scrappy-audit-report.md
migrations/: 20260627000001_initial.sql  20260627000002_scoring.sql  20260627000003_research.sql  20260627000004_click_log.sql  20260707000005_scrape_mode.sql
plugins/: jobhunter.go  register.go
scraper/: go.mod  go.sum  main.go
scripts/: build-release.sh  test_fallback_email.py  test_llm_email.py
src/: config.rs  db.rs  llm.rs  main.rs  research.rs  score.rs  scrape.rs  send.rs  smtp.rs  telegram.rs  tracker.rs  triage.rs
tests/: conftest.py
(+108 files in other folders)
